syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "$package$";
option java_outer_classname = "GreetingsProto";

// Request message used to ask for a greeting message
// for the given username with the specified locale.
message SayHelloRequest {

  // All the supported locales used to build a localized greeting.
  enum SupportedLocales {
    EN = 0;
    CH = 1;
    IT = 2;
  }

  string username = 1;           // the username of the use to greet
  SupportedLocales locale = 2;   // the locale to be used to greet the user
}

// Response message with the resulting greeting message.
message SayHelloResponse {
  string greetings = 1; // a localized greeting for the an user
  google.protobuf.Timestamp timestamp = 2;
}

// The 'Greeter' service that builds and returns nice
// localized greeting messages for a given user(s).
service GreeterService {
  // Ask the service to build a localized greeting.
  rpc SayHello (SayHelloRequest) returns (SayHelloResponse) {}

  // Ask the service to build all the available localized greetings and
  // stream them back to the client.
  rpc SayHellos (SayHelloRequest) returns (stream SayHelloResponse) {}

  // Will collect all the requests from the incoming stream and build a localized
  // greeting for all of them.
  rpc SayHelloToEveryone (stream SayHelloRequest) returns (SayHelloResponse) {}

  // For each request from the incoming stream will emit a localized
  // greeting and stream it back to the caller.
  rpc SayHelloForeachOne (stream SayHelloRequest) returns (stream SayHelloResponse) {}
}